[tool.poetry]
name = "hexlet-100"
version = "0.1.0"
description = ""
authors = ["DMITRII VORONETS <dmivron620@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
requests = "^2.31.0"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
